...
        tabBarStyle: { backgroundColor: '#1E1E1E', borderTopColor: '#333' },
        tabBarActiveTintColor: '#4CAF50',
        tabBarInactiveTintColor: '#888888',
        tabBarIcon: ({ color, size }) => {
          let iconName: keyof typeof Ionicons.glyphMap = 'help-outline';

          if (route.name === 'Progress') {
            iconName = 'stats-chart-outline';
          } else if (route.name === 'BMI') {
            iconName = 'scale-outline';
          } else if (route.name === 'BMR') {
            iconName = 'flame-outline';
          } else if (route.name === 'Body Fat') {
...
